v1.0/rsc-tools.md
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) &gt; [rsc-tools](./rsc-tools.md)

## rsc-tools package

Library for unpacking and repacking BYOND .rsc files

## Remarks

The [unpackRsc()](./rsc-tools.unpackrsc.md) and [packRsc()](./rsc-tools.packrsc.md) functions are used to convert between buffers and arrays of [RscEntries](./rsc-tools.rscentry.md)<!-- -->, the latter are used to see and manipulate the contents of the files inside the .rsc

## Classes

<table><thead><tr><th>

Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[RscEntry](./rsc-tools.rscentry.md)


</td><td>

Entry representing a single file in an RSC file


</td></tr>
</tbody></table>

## Enumerations

<table><thead><tr><th>

Enumeration


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[ResourceType](./rsc-tools.resourcetype.md)


</td><td>

Type of [entry](./rsc-tools.rscentry.md)


</td></tr>
</tbody></table>

## Functions

<table><thead><tr><th>

Function


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[packRsc(entries)](./rsc-tools.packrsc.md)


</td><td>

Pack [entries](./rsc-tools.rscentry.md) into an RSC file


</td></tr>
<tr><td>

[unpackRsc(arrayBuffer, options)](./rsc-tools.unpackrsc.md)


</td><td>

Unpack an RSC file into the [entries](./rsc-tools.rscentry.md) that compose it


</td></tr>
</tbody></table>

## Interfaces

<table><thead><tr><th>

Interface


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[UnpackOptions](./rsc-tools.unpackoptions.md)


</td><td>

Options when unpacking an RSC file


</td></tr>
</tbody></table>
