v2.0/rsc-tools.md
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) &gt; [rsc-tools](./rsc-tools.md)

## rsc-tools package

Library for unpacking and repacking BYOND .rsc files

## Remarks

The [unpackRsc()](./rsc-tools.unpackrsc.md) and [packRsc()](./rsc-tools.packrsc.md) functions are used to convert between buffers and arrays of [RscEntries](./rsc-tools.rscentry.md)<!-- -->, the latter are used to see and manipulate the contents of the files inside the .rsc

## Classes

|  Class | Description |
|  --- | --- |
|  [EmptyRscEntry](./rsc-tools.emptyrscentry.md) | A hole in the rsc file |
|  [RscEntry](./rsc-tools.rscentry.md) | Entry representing a single file in an RSC file |

## Abstract Classes

|  Abstract Class | Description |
|  --- | --- |
|  [BaseRscEntry](./rsc-tools.baserscentry.md) | Entry in an RSC file |

## Enumerations

|  Enumeration | Description |
|  --- | --- |
|  [ResourceType](./rsc-tools.resourcetype.md) | Type of [entry](./rsc-tools.rscentry.md) |

## Functions

|  Function | Description |
|  --- | --- |
|  [packRsc(entries)](./rsc-tools.packrsc.md) | Pack [entries](./rsc-tools.rscentry.md) into an RSC file |
|  [unpackRsc(arrayBuffer, options)](./rsc-tools.unpackrsc.md) | Unpack an RSC file into the [entries](./rsc-tools.rscentry.md) that compose it |
|  [unpackRsc(arrayBuffer, options)](./rsc-tools.unpackrsc_1.md) | Unpack an RSC file into the [entries](./rsc-tools.rscentry.md) that compose it, including holes in the output |
|  [unpackRsc(arrayBuffer, options)](./rsc-tools.unpackrsc_2.md) | Unpack an RSC file into the [entries](./rsc-tools.rscentry.md) that compose it |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [UnpackOptions](./rsc-tools.unpackoptions.md) | Options when unpacking an RSC file |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [MaybeEmptyRscEntry](./rsc-tools.maybeemptyrscentry.md) | Used to discriminate between [RscEntry](./rsc-tools.rscentry.md) and [EmptyRscEntry](./rsc-tools.emptyrscentry.md) based on [BaseRscEntry.used](./rsc-tools.baserscentry.used.md) |

